# MaskProxy

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  COMPONENTS.md  README.md  RULES.md  docker-compose.yml
apps/backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/backend/app/: auth.py  cache.py  database.py  main.py  models 2.py  models.py  security.py  security_utils.py
apps/backend/app/routers/: api_keys.py  auth.py  config.py  logs.py  provider_keys.py  users.py
apps/frontend/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/app/dashboard/provider-vault/: page.tsx
apps/frontend/src/app/keys/: page.tsx
apps/frontend/src/app/login/: page.tsx
apps/frontend/src/app/logs/: page.tsx
apps/frontend/src/app/register/: page.tsx
apps/frontend/src/app/settings/: account-settings.tsx  page.tsx  pii-settings.tsx  routing-settings.tsx
apps/frontend/src/components/: api-key-manager.tsx  app-shell.tsx  live-request-logs.tsx  logs-table.tsx  masked-prompt.tsx  privacy-settings.tsx  sidebar.tsx  stats-bar.tsx
apps/frontend/src/components/ui/: badge.tsx  dialog.tsx  toast.tsx  toaster.tsx
apps/frontend/src/hooks/: use-toast.ts
apps/frontend/src/lib/: api 2.ts  api.ts  auth.tsx  query-provider.tsx
apps/proxy/: Cargo.toml  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/proxy/app/: config.py  main.py  masking.py  proxy_service.py  session_store.py
apps/proxy/app/detectors/: __init__.py  base.py  composite.py  factory.py  ner.py  regex.py
apps/proxy/app/detectors/backends/: __init__.py  huggingface.py  onnx.py
apps/proxy/app/routing/: __init__.py  base.py  embedding.py  factory.py  keyword.py  lancedb_store.py  semantic.py  store.py
apps/proxy/models/: DOCKER_MODELS.md  download.py
apps/proxy/models/optimum-all-MiniLM-L6-v2/: routes.json
apps/proxy/models/optimum-bert-base-NER/: README.md  labels.json
apps/proxy/src/: main 2.rs  main.rs  main_tests.rs  proxy.rs  proxy_tests.rs
apps/proxy/src/masker/: mod.rs  ner.rs
apps/proxy/src/rehydrator/: mod.rs  tests.rs
apps/proxy/src/router/: embedding.rs  mod.rs  tests.rs
apps/proxy/src/state/: lancedb.rs  lancedb_tests.rs  mod.rs  redis.rs
apps/proxy/tests/: test_detectors.py  test_embedding_routing.py  test_lancedb_routing.py  test_ner_backend.py  test_onnx_backend.py  test_proxy.py  test_routing.py  test_semantic_routing.py
