[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proxy"
path = "src/main.rs"

[dependencies]
# Pingora server / proxy integration
pingora-core     = { version = "0.5.0", features = ["rustls"] }
pingora-proxy    = { version = "0.5.0", features = ["rustls"] }
pingora-http     = "0.5.0"
bytes            = "1"
clap             = { version = "3.2.25", features = ["derive"] }

# Async runtime
tokio            = { version = "1", features = ["full"] }
async-trait      = "0.1"

# JSON serialization / deserialization
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
regex            = "1"
url              = "2"
reqwest          = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sha2             = "0.10"
rustls           = { version = "0.23", features = ["ring"] }
ort              = { version = "2.0.0-rc.12", features = ["load-dynamic", "ndarray"] }
tokenizers       = "0.20"
futures          = "0.3"
lancedb          = "0.12"
arrow-array      = "52"
arrow-schema     = "52"

# Redis (session state + token map storage)
redis            = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Unique session IDs per request
uuid             = { version = "1", features = ["v4"] }

# Error handling
anyhow           = "1"
thiserror        = "1"

# Tracing / observability (Phase 3 — wired up early so spans are available)
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
lance = { path = "vendor/lance" }
